New in 0.7.x:
  * Added check-tag-description.sh to test proper lookup of tag documentation


New in 0.7.15:
  * Working with libexif and exif ver. 0.6.19
  * Added check-readwrite-identity-nofixup.sh that uses --no-fixup on the
    check-readwrite-identity.sh tests
  * Added --width option to allow more text to be compared
  * Added check-bid37022.sh to test for the fixed libexif heap
    overflow

New in 0.7.14:
  * Working with libexif and exif ver. 0.6.18
  * Created check-vars.sh script to eliminate the need to generate all
    the tests scripts at build time
  * Made the tests work in non-English locales
  * Added check-no-unknown-tags.sh test to ensure that all EXIF tags are
    recognized
  * Added check-all-mandatory-tags.sh test to ensure that no EXIF tags need
    to be added because they are mandatory
  * Added check-readwrite-identity.sh test that passes each JPEG image
    through a read/write/read pass to ensure that the final written tags equal
    the originals

New in 0.7.13:
  * Working with libexif and exif ver. 0.6.17
  * Additional tests on pel images
  * Fixed build-config.sh to properly update CVS repositories

New in 0.7.12:
  * Added build-config.sh SVN support.
  * Fetch pel (PHP Exif Library) test images via SVN.
  * Get rid of autogen.sh.
  * Always check PEL images.
  * Use auto-m4 for autoreconf-provided *.m4 files.